...
            
          </ScrollView>
          
          <View style={styles.bottom}>
          <Divider />
            <List.Item
              title="My profile"
              left={props => <List.Icon {...props} icon="account-outline" />}
              onPress={() => navigation.navigate('Profile')}
            />
            <List.Item
              title="New route"
              left={props => <List.Icon {...props} icon="plus" />}
...
