...
        } catch (error) {
        }
    }
    const handleSignUp = () => {
        // Check if email is valid
        if (!isValidEmail(email)) {
            setEmailError("Invalid email address");
            return;
        } else {
            setEmailError("");
        }

        // Check if password is valid
        if (!isValidPassword(password)) {
            setPasswordError("Password must be at least 8 characters long");
            return;
        } else {
            setPasswordError("");
        }

        // Check if passwords match
...

    function EmailConfirmationDialog() {
        const [visible, setVisibleDialog] = React.useState(true);

        const hideDialog = () => {
            setVisibleDialog(false)
            navigation.navigate('Login');
        }

        return (
            <Portal>
                <Dialog visible={visible} onDismiss={hideDialog}>
                    <Dialog.Title>
...
                    <Dialog.Content>
                        <Paragraph>
                            Please verify your account using the URL sent to your email.
                        </Paragraph>
                    </Dialog.Content>
                    <Dialog.Actions>
                        <Button onPress={hideDialog}>Ok</Button>
                    </Dialog.Actions>
                </Dialog>
            </Portal>
        );
    }

...
                            error={emailError}
                            mode="outlined"
                            onChangeText={email => setEmail(email)}
                            left={<TextInput.Icon icon="email-outline"/>}
                        />
                        {emailError ? <HelperText style={styles.error}>{emailError}</HelperText> :
                            <HelperText>Email</HelperText>}
                    </View>
                    <View>
                        <TextInput
                            style={styles.input}
                            value={password}
                            error={passwordError}
...
                            onChangeText={password => setPassword(password)}
                            left={<TextInput.Icon icon="lock-outline"/>}
                            right={<TextInput.Icon icon="eye-outline" onPress={handleTogglePassword}/>}
                            secureTextEntry={!showPassword}
                        />
                        {passwordError ? <HelperText style={styles.error}>{passwordError}</HelperText> :
                            <HelperText>Password</HelperText>}
                    </View>
                    <View>
                        <TextInput
                            style={styles.input}
                            value={confirmPassword}
                            error={confirmError}
...
                        }
                        {showConfirmEmailDialog && <EmailConfirmationDialog/>}
                    </View>

                    <View style={styles.input}>
                        <Button mode="contained" onPress={handleSignUp}>
                            Sign Up
                        </Button>
                    </View>
                </View>
                <View style={styles.bottom}>
                    <Text variant="bodyMedium">
                        Already have an account?
                    </Text>
                    <Button mode="text" onPress={() => navigation.navigate('Login')}>
                        Login
                    </Button>
                </View>
            </View>
...
