...
                        />
                        <Stack.Screen
                            name="Root"
                            component={Root}
                        />
                        <Stack.Screen
                            name="Addresses"
                            component={AddressesScreen}
                            options={{ 
                                headerShown: true,
                                headerShadowVisible: false,
                                headerStyle: {
                                    backgroundColor: colors.surfaceVariant
...
