...

function HomeScreen({data, setRefresh, refresh, places, setPlaces}) {
    const {access_token} = data;
    const {colors} = useTheme();
    const navigation = useNavigation();
    const autocompleteRef = useRef(null);
    const AUTOCOMPLETE_PLACEHOLDER = 'Enter Location';

    const mapRef = useRef(null);


    const [depot, setDepot] = useState();
    const [currentRegion, setCurrentRegion] = useState({
...
                        </Button>
                        <Button
                            style={[styles.routeParametersButton, {backgroundColor: colors.secondary}]}
                            textColor={'black'}
                            mode={'contained'}
                            icon={'map-marker-multiple-outline'}
                            onPress={() => navigation.navigate('Addresses', {access_token, setPlaces})}>
                            Import addresses
                        </Button>
                    </View>
                    <ScrollView>
                        {!destinations.length ?
                            <View style={styles.emptyContent}>
...
