...
                <Divider/>
                <Dialog.Content style={{marginTop: 16}}>
                  <Text variant="bodyMedium">Do you want to import these addresses to a new route?</Text>
                </Dialog.Content>
                    <Dialog.Actions>
                      <Button onPress={() => setVisible(false)}>No</Button>
                      <Button onPress={handleAccept}>Yes</Button>
                  </Dialog.Actions>
                </Dialog>
              </Portal>
        </View>
        );
    }
...
