...

    return (
      <View style={styles.container}>
        <Divider/>
        <ScrollView>
            <View style={styles.header}>
                <List.Subheader>Name</List.Subheader>
                <List.Subheader>Completed</List.Subheader>
            </View>
            {viewData && viewData.map((item, index) => (
                <View key={index}>
                <List.Item 
                    title={item.name}
                    left={props => <List.Icon {...props} icon="arrow-right"/>}
...
