...

        <Divider/>

        <View style={styles.bottom}>

            <List.Item
                title="Routes history"
                left={props => <List.Icon {...props} icon="history"/>}
                onPress={() => navigation.navigate('History')}
            />
            <List.Item
                title="New route"
                left={props => <List.Icon {...props} icon="car-outline"/>}
...
