...
                onPress={handleDeletePress}
                icon='delete'>Delete
              </Button>
              <Button
                onPress={handleAcceptPress}
                icon='map-marker-plus'>
                  Set
              </Button>
              </Card.Actions>
              
            </View>
            
          </View>     
...
