...
                    style={{
                        justifyContent: 'flex-end',
                        margin: 0,
                    }}
                >
                    <View style={{backgroundColor: 'white'}}>
                        <Text style={{padding: 16}}>Edit route</Text>
                        <List.Item
                            title={`Rename`}
                            description={`${name}`}
                            onPress={toggleModalOfName}
                            left={props => <IconButton icon={'pencil-circle-outline'} size={26}/>}
                        >
                        </List.Item>
                        <List.Item
                            title={`Regenrate`}
                            description={`Use unvisted destinations and recreate your route`}
                            left={props => <IconButton icon={'refresh'} size={26}/>}
                            onPress={moveToRegenerate}
                        >
                        </List.Item>
                        <List.Item
                            title={`Delete route`}
                            description={'Delete this route'}
                            left={props => <IconButton icon={'trash-can-outline'} size={26}/>}
                            onPress={toggleDeleteModal}
                        >
                        </List.Item>
                    </View>
...
