...
                    <View style={styles.buttonContainer}>
                        <Button
                            style={styles.optimiseButton}
                            mode={'contained'}
                            icon={'navigation-variant-outline'}
                            onPress={handleOptimize}>
                            Navigate
                        </Button>

                    </View>
                </LinearGradient>
            </View>

...
