appId: route.planner
---
- launchApp
- tapOn:
    above:
      text: "Email"
      index: 0
- inputText: ${MAESTRO_USERNAME}
- tapOn:
    above:
      text: "Password"
      index: 0
- inputText: ${MAESTRO_PASSWORD}
- tapOn: "Login"
- waitForAnimationToEnd
- tapOn:
    below: "Enter Location"
    index: 0
- tapOn: "My profile"
- assertVisible: "Email"
- assertVisible: 'Change the password'
- assertVisible: 'Delete all active routes'
- assertVisible: 'Sign out'
