appId: route.planner
---
- launchApp
- tapOn:
    above:
      text: "Email"
      index: 0
- inputText: "routeplanner@testing.com"
- tapOn:
    above:
      text: "Password"
      index: 0
- inputText: "passsword1234"
- tapOn: "Login"
- assertVisible: "No user for that email"
- tapOn: "Ok"
- assertNotVisible: "No user for that email"
