appId: route.planner
---
- launchApp
- tapOn:
    above:
      text: "Email"
      index: 0
- inputText: "routeplanner@testing.com"
- tapOn:
    below:
      above: "Password"
      index: 0
- inputText: "pass"
- tapOn: "Login"
- assertVisible: "Password must be at least 8 characters long"
