appId: route.planner
---
- launchApp
- tapOn: "Sign up"
- tapOn:
    above:
      text: "Email"
      index: 0
- inputText: "routeplanner@testing.com"
- tapOn:
    below:
      text: "Email"
      index: 0
- inputText: "pass"
- tapOn:
    below:
      text: "password"
      index: 0
- inputText: "pass"
- tapOn: "Sign Up"
- assertVisible: "Password must be at least 8 characters long"
